@@ -208,6 +208,7 @@ function Return_ptPT()
     --linkifier
     ["lfer_Spawn"] = "Spawn",
     ["lfer_List"] = "List",
+	["lfer_Reload"] = "Reload",
     ["lfer_Goto"] = "Goto",
     ["lfer_Move"] = "Move",
     ["lfer_Turn"] = "Turn",
