@@ -109,6 +109,7 @@ function MangLinkifier_Link(orgtxt, id, type)
   elseif(type == "npcentry") then
     link = orgtxt .." - |cff" .. urlcolor .. "|Hnpcentryadd:" .. id .. "|h["..Locale["lfer_Spawn"].."]|h|r "
     link = link .." - |cff" .. urlcolor .. "|Hnpcentrylist:" .. id .. "|h["..Locale["lfer_List"].."]|h|r "
+    link = link .." - |cff" .. urlcolor .. "|Hnpcentryreload:" .. id .. "|h["..Locale["lfer_Reload"].."]|h|r "
   elseif(type == "npcdisplay") then
     link = orgtxt .." - |cff" .. urlcolor .. "|Hnpcdisplay:" .. id .. "|h["..Locale["lfer_Morph"].."]|h|r "
   elseif(type == "npcdisplay2") then
@@ -193,6 +194,9 @@ function MangLinkifier_SetItemRef(link, text, button)
     return;
   elseif ( strsub(link, 1, 12) == "npcentrylist" ) then
     SendChatMessage(".list creature "..strsub(link, 14), say, nil, nil)
+    return;
+  elseif ( strsub(link, 1, 14) == "npcentryreload" ) then
+    SendChatMessage(".reload creature_template "..strsub(link, 16), say, nil, nil)
     return;
   elseif ( strsub(link, 1, 10) == "npcdisplay" ) then
     SendChatMessage(".modify morph "..strsub(link, 12), say, nil, nil)
